<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.scan.home.IdentificationFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/custom_action_bar_background"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/warning"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/attention"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/warning_msg"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textAlignment="center"

            />
    </LinearLayout>


    <ImageView
        android:id="@+id/previewImage"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />


    <TextView
        android:id="@+id/tv_result_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/mushroom_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_result_accuracy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/accuracy"
        android:textAlignment="center"
        android:textSize="18sp" />

    <capstone.project.mushymatch.view.custom.button.CustomButtonRetake
        android:id="@+id/btn_take_picture_again"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:text="@string/retake_mushroom_picture"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@drawable/btn_retake"/>

    <capstone.project.mushymatch.view.custom.button.CustomButtonMoreInformation
        android:id="@+id/btn_more_information"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/more_information" />

</androidx.appcompat.widget.LinearLayoutCompat>