<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".view.about.MushroomInformationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/custom_action_bar_background"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/black" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline11"
            app:layout_constraintTop_toTopOf="@+id/guideline7"
            app:layout_constraintVertical_bias="0.019"
            tools:layout_editor_absoluteX="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image_mushroom"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/mushroom_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/sample_mushroom"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/lb_edible"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:text="@string/edible"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/image_mushroom"
                    app:layout_constraintStart_toStartOf="@+id/image_mushroom"
                    app:layout_constraintTop_toTopOf="@+id/image_mushroom"
                    app:layout_constraintVertical_bias="0.92" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/guideline11"
                app:layout_constraintTop_toTopOf="@+id/guideline7"
                app:layout_constraintVertical_bias="0.019"
                tools:layout_editor_absoluteX="16dp">

                <TextView
                    android:id="@+id/tv_mushroom_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/mushroom_name"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_mushroom_scientific_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/scientific_name"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/gray_100"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constraintVertical_bias="0.079"
                tools:layout_editor_absoluteX="16dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/desc"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                    <ImageView
                        android:id="@+id/iv_desc"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/ic_down"
                        android:contentDescription="@string/more" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_description"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/description"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_habitat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/gray_100"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constraintVertical_bias="0.079"
                tools:layout_editor_absoluteX="16dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_habitat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/habitat"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/iv_habitat"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/ic_down"
                        android:contentDescription="@string/more" />
                </RelativeLayout>


                <TextView
                    android:id="@+id/tv_desc_habit"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/description"
                    android:textSize="14sp" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/layout_recipes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/smith_apple"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tv_recipes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cooking_recipes"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_recipes"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/next_page"
                    android:contentDescription="@string/next_page" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_cultivate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/smith_apple"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tv_how_to_cultivate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/how_to_cultivate"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_how_to_cultivate"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/next_page" />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>



</androidx.appcompat.widget.LinearLayoutCompat>