<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    tools:context=".view.recipes.detail.CookingRecipesActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/custom_action_bar_background"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/black" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_recipes_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/nama_masakan"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:backgroundTint="@color/gray_100"
                />

            <ImageView
                android:id="@+id/iv_recipes_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/mushroom_image"
                app:srcCompat="@drawable/sample_mushroom"
                tools:srcCompat="@tools:sample/backgrounds/scenic"
                android:visibility="visible"/>

            <com.google.android.exoplayer2.ui.PlayerView
                android:id="@+id/playerView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="8dp"
                app:resize_mode="fit"
                app:show_buffering="when_playing"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btn_video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/video_tutorial"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:backgroundTint="@color/smith_apple"/>


            <LinearLayout
                android:id="@+id/layout_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingHorizontal="16dp"
                android:background="@drawable/custom_ingredients_bg"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredients"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:paddingVertical="8dp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/item_ingredients"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingHorizontal="16dp"
                android:background="@drawable/custom_ingredients_bg"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/steps"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:paddingVertical="8dp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_steps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/item_steps"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>